@@ -1,0 +1,3 @@
+MD5 e18247abf044e8e00616ef67f6126678 xrmap-2.10.tgz 3944521
+MD5 f3d37e38337aaae35c9ea7d3499002eb xrmap-2.30.tar.bz2 1148745
+MD5 534818ffb498322b64373f66ae042596 CIA_WDB2.jpd.gz 7391060
