@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/xrmap
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xrmap/ChangeLog,v 1.8 2005/04/28 18:32:36 wormo Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xrmap/ChangeLog,v 1.9 2005/06/15 16:25:19 smithj Exp $
+
+*xrmap-2.30 (15 Jun 2005)
+
+  15 Jun 2005; Jonathan Smith <smithj@gentoo.org> +xrmap-2.30.ebuild:
+  version bump for #71873
 
   28 Apr 2005; Stephanie Lockwood-Childs <wormo@gentoo.org> xrmap-2.29.ebuild:
   mark ~ppc
